# ml-alpha

./: .gitignore  CLAUDE.md  MSE_ind_1yr_report.md  MSRR_Transformer_report.md  README.md  RESEARCH_LOG.md  Transformer_report.md  gkx_paper_nn_settings.md  nn_all_parameters.md  pyproject.toml  train_nn.py  train_transformer.py  train_transformer_msrr.py
.claude/: settings.json
.claude/agents/: cluster-monitor.md  experiment-implementer.md  results-triager.md  stats-gatekeeper.md
.claude/hooks/: closed-record-reminder.sh  cluster-submit-gate.sh  research-log-checklist.sh
cluster/: ab_msrr_norm.py  collect.py  repro.sbatch  run_year.py
docs/: BACKLOG.md  REFERENCE.md
docs/decisions/: L-01-judge-across-seed-year-distribution.md  L-02-msrr-scale-invariance.md  L-03-test-dont-dismiss-on-priors.md  L-04-check-saved-artifacts-first.md  L-05-attention-scaling-is-not-the-bottleneck.md  L-06-period-matching-and-the-1-survivor-verdict.md  L-07-ic-and-sdf-sharpe-can-diverge.md  L-08-screens-can-be-false-positives.md  L-09-the-metric-was-the-bug.md  L-10-use-an-adversarial-second-model.md  L-11-power-check-the-controlled-contrast.md
docs/experiments/: EXP-001-reproduce-readme-transformer.md  EXP-002-msrr-ensemble-normalization-ab.md  EXP-003-capacity-voc-screen.md  (+9 more)
experiments/: collect_screen.py  exp_main.py  exp_main_msrr.py  exp_transformer.py  feature_scalers.py  ff5_regression.py  gen_configs.py  gkx_report.py  inspect_weights.py  manifest.py  msrr_combine.py  portfolio_analysis.py  run_experiment.py  sweep.sbatch  validate_local.py  validate_msrr_prep.py
(+20 files in other folders)
