[project]
name = "ml-alpha"
version = "0.1.0"
description = "ML models for cross-sectional stock return prediction (GKX 2020 / Kelly et al. 2025)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.12",
    "numpy",
    "pandas",
    "scipy",
    "openpyxl",
    "pyarrow",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
